src/kubernetes/perian/manifests/crafty/service.yml
apiVersion: v1
kind: Service
metadata:
  name: crafty-service
  namespace: perian-crafty
spec:
  selector:
    app: crafty
  ports:
    - name: crafty-80
      protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
