src/kubernetes/perian/manifests/crafty/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crafty-ingress
  namespace: perian-crafty
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "false"
    kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: traefik
  rules:
    - host: crafty.kidd.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crafty-service
                port:
                  number: 80
